--- a/src/main/resources/com/gym/gym/application/ManagePlans/Edit/EditClient.fxml
+++ b/src/main/resources/com/gym/gym/application/ManagePlans/Edit/EditClient.fxml
@@ -12,9 +12,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="ap" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gym.gym.application.ManageClients.Create.ClientController">
+<AnchorPane fx:id="ap" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gym.gym.application.ManageClients.Edit.EditClientController">
    <children>
-      <ImageView fx:id="profilePicture" fitHeight="130.0" fitWidth="116.0" layoutX="15.0" layoutY="90.0" onMouseClicked="#addPicture" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="90.0">
+      <ImageView fx:id="profilePicture" fitHeight="130.0" fitWidth="116.0" layoutX="15.0" layoutY="90.0" onMouseClicked="#changePicture" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="90.0">
          <image>
             <Image url="@../../../../../../imgs/NoUserImg.png" />
          </image>
@@ -24,6 +24,7 @@
       </ImageView>
       <TextField fx:id="numMatricula" editable="false" layoutX="14.0" layoutY="28.0" prefHeight="30.0" prefWidth="116.0" styleClass="input" stylesheets="@../../../../../../styles/FormStyles.css" />
       <DatePicker fx:id="dataMatricula" layoutX="142.0" layoutY="28.0" prefHeight="30.0" prefWidth="135.0" styleClass="input" stylesheets="@../../../../../../styles/FormStyles.css" />
+      <ComboBox fx:id="tipoPlano" layoutX="287.0" layoutY="28.0" prefHeight="30.0" prefWidth="376.0" promptText="Selecionar" styleClass="input" stylesheets="@../../../../../../styles/FormStyles.css" />
       <TextField fx:id="nome" layoutX="160.0" layoutY="109.0" prefHeight="30.0" prefWidth="255.0" styleClass="input" stylesheets="@../../../../../../styles/FormStyles.css" AnchorPane.leftAnchor="160.0" AnchorPane.topAnchor="109.0" />
       <TextField fx:id="sobrenome" layoutX="160.0" layoutY="167.0" prefHeight="30.0" prefWidth="255.0" styleClass="input" stylesheets="@../../../../../../styles/FormStyles.css" />
       <Label layoutX="162.0" layoutY="91.0" prefHeight="15.0" prefWidth="39.0" text="Nome" AnchorPane.leftAnchor="162.0" AnchorPane.rightAnchor="599.0" AnchorPane.topAnchor="91.0">
@@ -60,6 +61,11 @@
          </font>
       </Label>
       <Label layoutX="155.0" layoutY="10.0" text="Data da Matrícula">
+         <font>
+            <Font name="Arial" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="287.0" layoutY="10.0" text="Plano">
          <font>
             <Font name="Arial" size="12.0" />
          </font>
@@ -167,35 +173,11 @@
       <Label layoutX="57.0" layoutY="354.0" text="*" textFill="RED" />
       <Label layoutX="208.0" layoutY="354.0" text="*" textFill="RED" />
       <Label layoutX="253.0" layoutY="7.0" text="*" textFill="RED" />
-      <Label layoutX="15.0" layoutY="429.0" text="Plano">
+      <ComboBox fx:id="selectAtivo" layoutX="677.0" layoutY="28.0" prefHeight="30.0" prefWidth="100.0" styleClass="input" stylesheets="@../../../../../../styles/FormStyles.css" />
+      <Label layoutX="677.0" layoutY="10.0" text="Situação">
          <font>
             <Font name="Arial" size="12.0" />
          </font>
       </Label>
-      <ComboBox fx:id="tipoPlano" layoutX="16.0" layoutY="451.0" prefHeight="30.0" prefWidth="500.0" promptText="Selecionar" styleClass="input" stylesheets="@../../../../../../styles/FormStyles.css" />
-      <TextField fx:id="valorPlano" editable="false" layoutX="527.0" layoutY="452.0" prefHeight="30.0" prefWidth="170.0" styleClass="input" stylesheets="@../../../../../../styles/FormStyles.css" />
-      <Label layoutX="527.0" layoutY="429.0" text="Valor a pagar">
-         <font>
-            <Font name="Arial" size="12.0" />
-         </font>
-      </Label>
-      <Label layoutX="705.0" layoutY="429.0" text="Vencimento">
-         <font>
-            <Font name="Arial" size="12.0" />
-         </font>
-      </Label>
-      <TextField fx:id="vencimentoPlano" layoutX="741.0" layoutY="451.0" prefHeight="30.0" prefWidth="31.0" styleClass="input" stylesheets="@../../../../../../styles/FormStyles.css" />
-      <Label layoutX="706.0" layoutY="459.0" text="Dia:">
-         <font>
-            <Font name="Arial" size="12.0" />
-         </font>
-      </Label>
-      <Separator layoutX="16.0" layoutY="419.0" prefHeight="3.0" prefWidth="768.0" />
-      <Label layoutX="16.0" layoutY="487.0" text="Forma de Pagamento">
-         <font>
-            <Font name="Arial" size="12.0" />
-         </font>
-      </Label>
-      <ComboBox fx:id="formaPagamento" layoutX="16.0" layoutY="508.0" prefHeight="30.0" prefWidth="500.0" promptText="Selecionar" styleClass="input" stylesheets="@../../../../../../styles/FormStyles.css" />
    </children>
 </AnchorPane>
